security PassportJS: part 2

--- a/public/app/views/menu.html
+++ b/public/app/views/menu.html
@@ -2,8 +2,9 @@
     <div class="container-fluid">
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="#/">Login</a></li>
-                <li><a href="#/lobby">Lobby</a></li>
+                <li ng-show="!currentUser"><a href="#/">Login</a></li>
+                <li ng-show="currentUser"><a href="#/lobby">Lobby</a></li>
+                <li ng-show="currentUser"><a href="#/logout">Logout</a></li>
             </ul>
         </div>
     </div>
