--- a/public/app/views/leaderboard.html
+++ b/public/app/views/leaderboard.html
@@ -1,7 +1,10 @@
-<h2>Leaderboards</h2>
-<div>
-    <p ng-repeat="leader in leaders | orderBy:'-points'">
-        {{leader.name}}
-        {{leader.points}}
-    </p>
+<div ng-controller="LeaderBoardController">
+    <h2>Leaderboards</h2>
+    <pagination total-items="totalItems" items-per-page="itemsPerPage" ng-model="currentPage" ng-change="pageChanged()" max-size="maxSize" class="pagination-sm" boundary-links="true"></pagination>
+    <div>
+        <p ng-repeat="leader in leaders | orderBy:'-points'">
+            {{leader.name}}
+            {{leader.points}}
+        </p>
+    </div>
 </div>
