--- a/public/app/views/leaderboard.html
+++ b/public/app/views/leaderboard.html
@@ -1,4 +1,4 @@
-<div ng-controller="LeaderBoardController">
+<div>
     <h2>Leaderboards</h2>
     <pagination total-items="totalItems" items-per-page="itemsPerPage" ng-model="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true"></pagination>
     <div>
