--- a/public/app/views/leaderboard.html
+++ b/public/app/views/leaderboard.html
@@ -1,11 +1,21 @@
 <div>
     <h2>Leaderboards</h2>
-    <pagination total-items="totalItems" items-per-page="itemsPerPage" ng-model="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true"></pagination>
+    <pagination total-items="players.length" items-per-page="itemsPerPage" ng-model="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true"></pagination>
     <div>
-        <p ng-repeat="player in players | orderBy:'-points' | offset: (currentPage-1)*itemsPerPage | limitTo: itemsPerPage">
-            {{player.name}}
-            {{player.points}}
-        </p>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <td>Username</td>
+                    <td>Ranking Points</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="player in players | orderBy:'-points' | offset: (currentPage-1)*itemsPerPage | limitTo: itemsPerPage">
+                    <td>{{player.name}}</td>
+                    <td>{{player.points}}</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
     <button ng-click="update()">Update</button>
 </div>
