--- a/public/app/styles/chatbox.css
+++ b/public/app/styles/chatbox.css
@@ -1,22 +1,22 @@
 #chatbox{
-    margin: 50px auto 0 auto;
+    margin-top: 0.5%;
     width: 100%;
-    height: 200px;
-    border: 1px solid #000000;
+    height: 95%;
+    border: 1px solid;
     border-radius: 10px;
 }
 
 aside{
-    padding: 10px;
+    padding: 1%;
     float: left;
     width: 20%;
-    height: 200px;
+    height: 100%;
     border-right: 1px solid #000000;
 }
 
 aside #usersHeader{
-    margin: 0 0 5px 0;
-    padding: 2px;
+    padding: 1%;
+    height: 20%;
     width: 100%;
     border-bottom: 1px solid #d3d3d3;
     font-size: 14px;
@@ -24,11 +24,10 @@ aside #usersHeader{
 }
 
 aside #connectedUsersList{
-    height: 145px;
+    height: 75%;
     overflow-y: auto;
     list-style: none;
-    padding-left: 10px;
-    margin-bottom: 5px;
+    padding-left: 1%;
 }
 
 aside .connectedUser{
@@ -38,16 +37,12 @@ aside .connectedUser{
 #textbox{
     width: 80%;
     float: right;
-    height: 150px;
+    height: 70%;
     padding: 5px;
 }
 
-.nav > li > a{
-    padding: 4px 10px;
-}
-
 .messages{
-    height: 115px;
+    height: 75%;
     list-style: none;
     padding: 5px;
     margin: 0 5px 0 0;
@@ -56,6 +51,7 @@ aside .connectedUser{
 
 .loggingMessage {
     color: #348ed6;
+
 }
 
 .usernameLogMessage{
@@ -65,18 +61,18 @@ aside .connectedUser{
 .usernameMessage{
     color: #348ed6;
     font-weight: bold;
-    margin-right: 10px;
 }
 
 #inputbar {
     width: 80%;
     float: right;
-    height: 50px;
-    padding: 5px;
+    height: 10%;
+    padding: 2%;
 }
 
 #textinput{
     width: 85%;
+    height: 25%;
     float: left;
-    margin: 0 10px;
+    margin-right: 2%;
 }
