--- a/public/app/styles/lobbyGame.css
+++ b/public/app/styles/lobbyGame.css
@@ -1,6 +1,7 @@
 .lobbyGame{
-    margin: 10px;
-    padding: 5px;
+    width: 30%;
+    margin: 1%;
+    padding: 2%;
     border: 1px solid;
     float: left;
 }
