--- a/public/app/views/game.html
+++ b/public/app/views/game.html
@@ -1,32 +1,31 @@
-<div>
-    <section>
-        <div class="information">
-            <h1>{{game.turnText}}</h1>
-        </div>
-
-        <table class="field">
-            <thead>
-            <tr>
-                <th ng-repeat="(n, col) in game.board[0] track by $index">
-                    <div ng-click="game.play(n)" class="picker" ng-class="{'inactive': !game.myTurn}"></div>
-                </th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="row in game.board">
-                <td ng-repeat="col in row track by $index">
-                    <div ng-class="{empty: col === 0, yellow: col === 1, red: col === 2}"></div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-        <div class="postGameOptions inactive" ng-class="{'inactive': !game.result}">
-            <div class="options">
-                <h1>{{game.result}}</h1>
-                <h2 ng-show="game.waitingForRematch">Waiting for opponent..</h2>
-                <button class="btn" ng-click="game.requestRematch()">Rematch?</button>
-                <button class="btn" ng-click="game.leave()">Leave</button>
-            </div>
-        </div>
-    </section>
+<div class="information">
+    <h4>Game.turnText: {{game.turnText}}</h4>
+</div>
+<div class="gameField">
+    <table class="fieldTable">
+        <thead>
+        <tr>
+            <th ng-repeat="(n, col) in game.board[0] track by $index" class="col-md-1">
+                <div ng-click="game.play(n)" class="picker" ng-class="{'inactive': !game.myTurn}"></div>
+            </th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="row in game.board">
+            <td ng-repeat="col in row track by $index">
+                <div ng-class="{empty: col === 0, yellow: col === 1, red: col === 2, circle: true}"></div>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+<div class="options">
+    <div class="optionLeft">
+        <h4>Game.result: {{game.result}}</h4>
+        <h5>game.waitingForRematch: Waiting for opponent..</h5>
+    </div>
+    <div class="optionRight">
+        <button class="btn" ng-click="game.requestRematch()">Rematch?</button>
+        <button class="btn" ng-click="game.leave()">Leave</button>
+    </div>
 </div>
