security: no double login possible

--- a/public/app/views/login.html
+++ b/public/app/views/login.html
@@ -6,4 +6,6 @@
     <input ng-model="user.password" class="form-control" placeholder="password" type="password"/>
 
     <button ng-click="login(user)" class="btn btn-primary btn-block"> Login </button>
+
+    <p>{{loginMessage}}</div>
 </div>
