ng controller fixes

--- a/public/app/views/leaderboard.html
+++ b/public/app/views/leaderboard.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-controller="LeaderBoardController" >
     <h3>Leaderboards</h3>
     <pagination total-items="players.length" items-per-page="itemsPerPage" ng-model="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true"></pagination>
     <table class="table table-striped">
