created socketFactory and chatbox service

--- a/public/app/views/chatbox.html
+++ b/public/app/views/chatbox.html
@@ -1,4 +1,4 @@
-<div id="chatbox">
+<div id="chatbox" ng-controller="ChatboxController">
     <aside id="usersOverview">
         <div id="usersHeader">Users</div>
         <ul id="connectedUsersList">
