--- a/public/app/views/lobby.html
+++ b/public/app/views/lobby.html
@@ -5,10 +5,10 @@
 <div class="lobbyGame" ng-repeat="game in games | offset: (currentPage-1)*itemsPerPage | limitTo: itemsPerPage">
     <div class="">
         <p>{{game.name}}</p>
-        <p>Host: {{game.host.name}} ({{game.host.points}})</p>
-        <p ng-show="game.challenger != null">Challenger: {{game.challenger.name}} ({{game.challenger.points}})</p>
+        <p>Host: {{players[game.host-1].name}} ({{players[game.host-1].points}})</p>
+        <p ng-show="game.challenger">Challenger: {{players[game.challenger-1].name}} ({{players[game.challenger-1].points}})</p>
         <p>Rules: {{game.rated ? "Rated" : "Unrated"}} game</p>
-        <p ng-show="game.watchers.length > 0">Watchers: <span ng-repeat="watcher in game.watchers">{{watcher.name}} </span></p>
+        <p ng-show="game.watchers.length > 0">Watchers: <span ng-repeat="watcher in game.watchers">{{players[watcher-1].name}} </span></p>
     </div>
     <div class="">
         <button class="btn" ng-show="game.challenger === null" ng-click="joinGame(game.gameId)">Join!</button>
