Connect4Game: getting board info

--- a/public/app/views/game.html
+++ b/public/app/views/game.html
@@ -1,5 +1,5 @@
 <div class="information">
-    <h4>Game.turnText: {{game.turnText}}</h4>
+    <h4>{{players[game.currentPlayer - 1].name}}'s turn</h4>
 </div>
 <div class="gameField">
     <table class="fieldTable">
