--- a/public/app/views/leaderboard.html
+++ b/public/app/views/leaderboard.html
@@ -22,7 +22,7 @@
             <td>Player 1</td>
             <td>Player 2</td>
             <td>Winner</td>
-            <td>Ranked</td>
+            <td>Rated</td>
         </tr>
         </thead>
         <tbody>
@@ -30,9 +30,8 @@
                 <td>{{game.player1}}</td>
                 <td>{{game.player2}}</td>
                 <td>{{game.winner}}</td>
-                <td>{{game.ranked}}</td>
+                <td>{{game.rated}}</td>
             </tr>
         </tbody>
     </table>
-    <button ng-click="update()">Update</button>
 </div>
