--- a/public/app/views/modals/newGame.html
+++ b/public/app/views/modals/newGame.html
@@ -9,7 +9,7 @@
                 <input type="text" class="form-control" ng-model="newGame.name" ng-required="true" placeholder="room name">
             </div>
             <label>
-                <input type="checkbox" ng-model="newGame.rated"> Ranked
+                <input type="checkbox" ng-model="newGame.rated"> Rated
             </label>
         </fieldset>
 </div>
