--- a/public/app/styles/index.css
+++ b/public/app/styles/index.css
@@ -28,7 +28,14 @@ body, html{
 }
 .leaderboardDiv{
     width: 32%;
-    height: 100%;
+    height: 65%;
+    float:right;
+    padding-left: 1%;
+    padding-right: 1%;
+}
+.latestGamesDiv{
+    width: 32%;
+    height: 35%;
     float:right;
     padding-left: 1%;
     padding-right: 1%;
