--- a/public/app/views/leaderboard.html
+++ b/public/app/views/leaderboard.html
@@ -1,4 +1,4 @@
-<div ng-controller="LeaderBoardController" >
+<div class="leaderboardDiv">
     <h3>Leaderboards</h3>
     <pagination total-items="players.length" items-per-page="itemsPerPage" ng-model="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true"></pagination>
     <table class="table table-striped">
@@ -12,25 +12,6 @@
             <tr ng-repeat="player in players | orderBy:'-points' | offset: (currentPage-1)*itemsPerPage | limitTo: itemsPerPage">
                 <td>{{player.name}}</td>
                 <td>{{player.points}}</td>
-            </tr>
-        </tbody>
-    </table>
-    <h4>Latest Games</h4>
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <td>Player 1</td>
-            <td>Player 2</td>
-            <td>Winner</td>
-            <td>Rated</td>
-        </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="game in latestGames">
-                <td>{{game.player1}}</td>
-                <td>{{game.player2}}</td>
-                <td>{{game.winner}}</td>
-                <td>{{game.rated}}</td>
             </tr>
         </tbody>
     </table>
