resign functionality ok

--- a/public/app/views/game.html
+++ b/public/app/views/game.html
@@ -26,6 +26,6 @@
     </div>
     <div class="optionRight">
         <button class="btn" ng-click="game.requestRematch()" ng-show="game.isFinished">Rematch?</button>
-        <button class="btn" ng-click="game.leave()">Leave</button>
+        <button class="btn" ng-click="game.leave()">Resign</button>
     </div>
 </div>
