--- a/public/app/views/lobby.html
+++ b/public/app/views/lobby.html
@@ -1,15 +1,14 @@
 <h2>Lobby</h2>
-<label>Search for player: </label>
-<input type="text" ng-model="searchPlayer">
-<!--TODO 01: Maak een checkbox waar aangevinkt kan worden of alleen de openstaande games getoond worden -->
-<!--<label>Open games only: </label>-->
-<!--<input type="checkbox" ng-model="openGamesOnly">-->
+<!--TODO 04: Maak een textinput waar kan aangegeven worden op welke spelers gefilterd moet worden voor de huidige games, en link aan model 'searchPlayer' -->
+<!--TODO 01: Maak een checkbox waar aangevinkt kan worden of alleen de openstaande games getoond worden, link aan model 'openGamesOnly' -->
 <div>
-    <!--TODO 02: filter de games zodat enkel de openstaande games mee in rekening gebracht worden voor het totale aantal items in de paginatie -->
-    <pagination total-items="(games | playerfilter:searchPlayer:players).length" items-per-page="itemsPerPage" ng-model="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true"></pagination>
+    <!--TODO 02: filter de games inline zodat enkel de openstaande games mee in rekening gebracht worden voor het totale aantal items in de paginatie -->
+    <!--TODO 05: maak gebruik van een externe filter (playerfilter, geef de juiste parameters mee aan de filter) zodat enkel de games te tonen waarvan de host of de challenger de ingegeven waarde bevat mee in rekening gebracht worden voor het totale aantal items in de paginatie -->
+    <pagination total-items="games.length" items-per-page="itemsPerPage" ng-model="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true"></pagination>
 </div>
-<!--TODO 03: filter de games zodat enkel de openstaande games getoond worden -->
-<div class="lobbyGame gameFade" ng-repeat="game in games | playerfilter:searchPlayer:players | offset: (currentPage-1)*itemsPerPage | limitTo: itemsPerPage">
+<!--TODO 03: filter de games inline zodat enkel de openstaande games getoond worden -->
+<!--TODO 05: maak gebruik van een externe filter (playerfilter, geef de juiste parameters mee aan de filter) om enkel de games te tonen waarvan de host of de challenger de ingegeven waarde bevat -->
+<div class="lobbyGame gameFade" ng-repeat="game in games | offset: (currentPage-1)*itemsPerPage | limitTo: itemsPerPage">
     <div class="">
         <p>{{game.name}}</p>
         <p>Host: {{players[game.host-1].name}} ({{players[game.host-1].points}})</p>
