--- a/public/app/styles/index.css
+++ b/public/app/styles/index.css
@@ -32,7 +32,9 @@ body, html{
     float:right;
     padding-left: 1%;
     padding-right: 1%;
+    overflow-y: auto;
 }
+
 .latestGamesDiv{
     width: 32%;
     height: 35%;
