--- a/public/app/styles/lobbyGame.css
+++ b/public/app/styles/lobbyGame.css
@@ -9,32 +9,4 @@
     clear: both;
 }
 
-.gameFade.ng-enter {
-    animation: my_fade_animation 2s linear;
-    -webkit-animation: my_fade_animation 2s linear;
-}
-
-@keyframes my_fade_animation {
-    from { opacity:0; }
-    to { opacity:1; }
-}
-
-@-webkit-keyframes my_fade_animation {
-    from { opacity:0; }
-    to { opacity:1; }
-}
-
-.gameFade.ng-leave {
-    animation: my_fade_animation2 2s linear;
-    -webkit-animation: my_fade_animation2 2s linear;
-}
-
-@keyframes my_fade_animation2 {
-    from { opacity:1; }
-    to { opacity:0; }
-}
-
-@-webkit-keyframes my_fade_animation2 {
-    from { opacity:1; }
-    to { opacity:0; }
-}
+/*TODO: ngAnimate: geef voor ng-enter en ng-leave aan wat er in de overeenkomstige situatie moet gebeuren, maak eventueel gebruik van keyframes */
