--- a/public/app/views/lobby.html
+++ b/public/app/views/lobby.html
@@ -1,15 +1,15 @@
 <h2>Lobby</h2>
-<!--TODO 04: Maak een textinput waar kan aangegeven worden op welke spelers gefilterd moet worden voor de huidige games, en link aan model 'searchPlayer' -->
 <!--TODO 01: Maak een checkbox waar aangevinkt kan worden of alleen de openstaande games getoond worden, link aan model 'openGamesOnly' -->
+<!--TODO 03: Maak een textinput waar kan aangegeven worden op welke spelers gefilterd moet worden voor de huidige games, en link aan model 'searchPlayer' -->
 <div>
-    <!--TODO 02: filter de games inline zodat enkel de openstaande games mee in rekening gebracht worden voor het totale aantal items in de paginatie -->
-    <!--TODO ??: maak paginatie aan, gebruik itemsPerPage, currentPage en maxSize uit scope (zie LobbyController), zorg voor boundary links -->
-    <!--TODO 05: maak gebruik van een externe filter (playerfilter, geef de juiste parameters mee aan de filter) zodat enkel de games te tonen waarvan de host of de challenger de ingegeven waarde bevat mee in rekening gebracht worden voor het totale aantal items in de paginatie -->
+    <!--TODO I: maak paginatie aan, gebruik itemsPerPage, currentPage en maxSize uit scope (zie LobbyController), zorg voor boundary links -->
+    <!--TODO II: filter de games inline zodat enkel de openstaande games mee in rekening gebracht worden voor het totale aantal items in de paginatie -->
+    <!--TODO III: maak gebruik van een externe filter (playerfilter, geef de juiste parameters mee aan de filter) zodat enkel de games te tonen waarvan de host of de challenger de ingegeven waarde bevat mee in rekening gebracht worden voor het totale aantal items in de paginatie -->
 </div>
-<!--TODO 03: filter de games inline zodat enkel de openstaande games getoond worden -->
-<!--TODO ??: pas het aantal getoonde games aan in functie van de paginatie, gebruik als filters: "offset: (currentPage-1)*itemsPerPage" en "limitTo: itemsPerPage" -->
-<!--TODO 05: maak gebruik van een externe filter (playerfilter, geef de juiste parameters mee aan de filter) om enkel de games te tonen waarvan de host of de challenger de ingegeven waarde bevat -->
-<!--TODO ??: ngAnimatie (nieuwe game: fade in; game verwijderd: fade out) - voeg een klasse toe aan de div waarmee je binnen css het effect gaat specifiëren-->
+<!--TODO 02: filter de games inline zodat enkel de openstaande games getoond worden -->
+<!--TODO 04: maak gebruik van een externe filter (playerfilter, geef de juiste parameters mee aan de filter) om enkel de games te tonen waarvan de host of de challenger de ingegeven waarde bevat -->
+<!--TODO IV: pas het aantal getoonde games aan in functie van de paginatie, gebruik als filters: "offset: (currentPage-1)*itemsPerPage" en "limitTo: itemsPerPage" -->
+<!--TODO AA: ngAnimatie (nieuwe game: fade in; game verwijderd: fade out) - voeg een klasse toe aan de div waarmee je binnen css het effect gaat specifiëren-->
 <div class="lobbyGame" ng-repeat="game in games">
     <div class="">
         <p>{{game.name}}</p>
