--- a/public/app/views/modals/newGame.html
+++ b/public/app/views/modals/newGame.html
@@ -6,17 +6,17 @@
         <fieldset>
             <div class="form-group">
                 <label>Room name</label>
-                <!--TODO: maak gameName required en geef een minimum lengte van 5-->
+                <!--TODO 01: maak gameName required en geef een minimum lengte van 5-->
                 <input name="gameName" type="text" class="form-control" ng-model="newGame.name" placeholder="room name">
             </div>
-            <!--TODO: error messages tonen via ng-message (gebruik "newGameForm.gameName.$error"), voeg bootstrap classes "alert alert-danger" toe -->
+            <!--TODO 02: error messages tonen via ng-message (gebruik "newGameForm.gameName.$error"), voeg bootstrap classes "alert alert-danger" toe -->
             <label>
                 <input type="checkbox" ng-model="newGame.rated"> Rated
             </label>
         </fieldset>
 </div>
 <div class="modal-footer">
-    <!--TODO: maak create button enkel enabled als form valid is (op basis van "newGameForm.$invalid") -->
+    <!--TODO 03: maak create button enkel enabled als form valid is (op basis van "newGameForm.$invalid") -->
     <button class="btn" ng-click="create()">Create</button>
     <button class="btn" ng-click="cancel()">Cancel</button>
 </div>
